welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:8: error: not found: value avance5
		avance5()
                ^